# meu-projeto-cvplot

./: .clang-format  CMakeLists.txt  Makefile  README.md  conanfile.py  main.cpp
libx265/: README.md  cmd  conanfile.py
opencv/: conanfile.py
